# qabot

./: .gitignore  Dockerfile  README.md  Security.md  pyproject.toml
.github/workflows/: autopr.yml  ci.yml
data/: pirate-speak.txt  records.json
examples/: query_file.py  query_postgres.py  query_wikidata.py
experiments/: assistant.py  flan_query_planner.py  local_llm.py  openai_functions.py  query_decomposer.py
qabot/: __init__.py  agent.py  caching.py  cli.py  config.py  data_loader_chain.py  data_loader_tool.py  data_query_chain.py  download_utils.py  duckdb.py  duckdb_documentation.py  duckdb_execute_tool.py  duckdb_manual_data_loader.py  duckdb_query.py  dynamic_tooling.py  formatting.py  llm.py  progress_callback.py  sqlagent.py  tool_definition.py
qabot/agents/: agent.py  data_query_chain.py
qabot/functions/: __init__.py  data_loader.py  describe_duckdb_table.py  duckdb_query.py  wikidata.py
qabot/prompts/: __init__.py  system.py
qabot/tools/: data_loader.py  describe_duckdb_table.py  duckdb_execute_tool.py  duckdb_query.py  graphql.py  wikidata.py
tests/: test_examples_folder.py  test_readme_examples.py
